Додає весь текстовий контент з макету

--- a/index.html
+++ b/index.html
@@ -4,9 +4,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Studio</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            WebStudio
+
+            <nav>
+                <ul>
+                    <li>Студия</li>
+                    <li>Портфолио</li>
+                    <li>Контакты</li>
+                </ul>
+            </nav>
+
+            <address>
+                <ul>
+                    <li>info@devstudio.com</li>
+                    <li>+38 096 111 11 11</li>
+                </ul>
+            </address>
+        </header>
+
+        <section>
+            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <button>Заказать услугу</button>
+        </section>
+
+        <section>
+            <p>
+                <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
+            <p>
+                <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+            <p>
+                <h3>ПЛАНИРОВАНИЕ</h3>
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+            <p>
+                <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
+        </section>
+
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <img src="/images/img1.png" alt="">
+            <img src="/images/img2.png" alt="">
+            <img src="/images/img3.png" alt="">
+        </section>
+
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="/images/photo1.jpeg" alt="">
+                    <h3>Игорь Демьяненко</h3>
+                    Product Designer
+                </li>
+                <li>
+                    <img src="/images/photo2.jpeg" alt="">
+                    <h3>Ольга Репина</h3>
+                    Frontend Developer
+                </li>
+                <li>
+                    <img src="/images/photo3.jpeg" alt="">
+                    <h3>Николай Тарасов</h3>
+                    Marketing
+                </li>
+                <li>
+                    <img src="/images/photo4.jpeg" alt="">
+                    <h3>Михаил Ермаков</h3>
+                    UI Designer
+                </li>
+            </ul>
+        </section>
+
+    </main>
+
+    <footer>
+        <address>
+            <ul>
+                <li>WebStudio</li>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li>info@example.com</li>
+                <li>+38 099 111 11 11</li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
