Додає символи для відображення зображень через Git
Додала крапки перед /, щоб зображення відображалися при переході на сторінку проекту у GitHub Pages

--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
 
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="/images/img1.png" alt="">
-            <img src="/images/img2.png" alt="">
-            <img src="/images/img3.png" alt="">
+            <img src="./images/img1.png" alt="">
+            <img src="./images/img2.png" alt="">
+            <img src="./images/img3.png" alt="">
         </section>
 
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/images/photo1.jpeg" alt="">
+                    <img src="./images/photo1.jpeg" alt="">
                     <h3>Игорь Демьяненко</h3>
                     Product Designer
                 </li>
                 <li>
-                    <img src="/images/photo2.jpeg" alt="">
+                    <img src="./images/photo2.jpeg" alt="">
                     <h3>Ольга Репина</h3>
                     Frontend Developer
                 </li>
                 <li>
-                    <img src="/images/photo3.jpeg" alt="">
+                    <img src="./images/photo3.jpeg" alt="">
                     <h3>Николай Тарасов</h3>
                     Marketing
                 </li>
                 <li>
-                    <img src="/images/photo4.jpeg" alt="">
+                    <img src="./images/photo4.jpeg" alt="">
                     <h3>Михаил Ермаков</h3>
                     UI Designer
                 </li>
