Корегує параметри зображень

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            WebStudio
+            <a href="">WebStudio</a>
 
             <nav>
                 <ul>
@@ -29,7 +29,7 @@
 
         <section>
             <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <button>Заказать услугу</button>
+            <button type="button">Заказать услугу</button>
         </section>
 
         <section>
@@ -53,31 +53,31 @@
 
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="./images/img1.png" alt="Программирование и блок-схемы">
-            <img src="./images/img2.png" alt="Разработка дизайна для девайсов">
-            <img src="./images/img3.png" alt="Цветовая палитра на планшете">
+            <img src="./images/img1.png" alt="Программирование и блок-схемы" width="370" height="294">
+            <img src="./images/img2.png" alt="Разработка дизайна для девайсов" width="370" height="294">
+            <img src="./images/img3.png" alt="Цветовая палитра на планшете" width="370" height="294">
         </section>
 
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/photo1.jpeg" alt="Фотография сотрудника">
+                    <img src="./images/photo1.jpeg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     Product Designer
                 </li>
                 <li>
-                    <img src="./images/photo2.jpeg" alt="Фотография сотрудника">
+                    <img src="./images/photo2.jpeg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     Frontend Developer
                 </li>
                 <li>
-                    <img src="./images/photo3.jpeg" alt="Фотография сотрудника">
+                    <img src="./images/photo3.jpeg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     Marketing
                 </li>
                 <li>
-                    <img src="./images/photo4.jpeg" alt="Фотография сотрудника">
+                    <img src="./images/photo4.jpeg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     UI Designer
                 </li>
