Завершує першу порцію правок

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 </ul>
             </nav>
 
-            <address>
+            <div>
                 <ul>
                     <li>info@devstudio.com</li>
                     <li>+38 096 111 11 11</li>
                 </ul>
-            </address>
+            </div>
         </header>
 
         <section>
@@ -33,29 +33,31 @@
         </section>
 
         <section>
-            <p>
-                <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-            <p>
-                <h3>ПУНКТУАЛЬНОСТЬ</h3>
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-            <p>
-                <h3>ПЛАНИРОВАНИЕ</h3>
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-            <p>
-                <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
+            <ul>
+                <li>
+                    <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                    Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </li>
+                <li>
+                    <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                </li>
+                <li>
+                    <h3>ПЛАНИРОВАНИЕ</h3>
+                    Равным образом консультация с широким активом в значительной степени обуславливает.
+                </li>
+                <li>
+                    <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </li>
+            </ul>
         </section>
 
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="./images/img1.png" alt="Программирование и блок-схемы" width="370" height="294">
-            <img src="./images/img2.png" alt="Разработка дизайна для девайсов" width="370" height="294">
-            <img src="./images/img3.png" alt="Цветовая палитра на планшете" width="370" height="294">
+            <img src="./images/img1.jpeg" alt="Программирование и блок-схемы" width="370" height="294">
+            <img src="./images/img2.jpeg" alt="Разработка дизайна для девайсов" width="370" height="294">
+            <img src="./images/img3.jpeg" alt="Цветовая палитра на планшете" width="370" height="294">
         </section>
 
         <section>
