Оновлює зображення на оптимізовані

--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
 
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="./images/img1.jpeg" alt="Программирование и блок-схемы" width="370" height="294">
-            <img src="./images/img2.jpeg" alt="Разработка дизайна для девайсов" width="370" height="294">
-            <img src="./images/img3.jpeg" alt="Цветовая палитра на планшете" width="370" height="294">
+            <img src="./images/img1.jpg" alt="Программирование и блок-схемы" width="370" height="294">
+            <img src="./images/img2.jpg" alt="Разработка дизайна для девайсов" width="370" height="294">
+            <img src="./images/img3.jpg" alt="Цветовая палитра на планшете" width="370" height="294">
         </section>
 
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/photo1.jpeg" alt="Фотография сотрудника" width="270" height="260">
+                    <img src="./images/photo1.jpg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     Product Designer
                 </li>
                 <li>
-                    <img src="./images/photo2.jpeg" alt="Фотография сотрудника" width="270" height="260">
+                    <img src="./images/photo2.jpg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     Frontend Developer
                 </li>
                 <li>
-                    <img src="./images/photo3.jpeg" alt="Фотография сотрудника" width="270" height="260">
+                    <img src="./images/photo3.jpg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     Marketing
                 </li>
                 <li>
-                    <img src="./images/photo4.jpeg" alt="Фотография сотрудника" width="270" height="260">
+                    <img src="./images/photo4.jpg" alt="Фотография сотрудника" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     UI Designer
                 </li>
