--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <footer>
         <address>
             <ul>
-                <li>WebStudio</li>
+                <li><a href="">WebStudio</a></li>
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li>info@example.com</li>
                 <li>+38 099 111 11 11</li>
