--- a/index.html
+++ b/index.html
@@ -1,102 +1,100 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio</title>
-</head>
-<body>
-    <main>
-        <header>
-            <a href="">WebStudio</a>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Web Studio</title>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<a href="">WebStudio</a>
 
-            <nav>
-                <ul>
-                    <li>Студия</li>
-                    <li>Портфолио</li>
-                    <li>Контакты</li>
-                </ul>
-            </nav>
+				<ul>
+					<li>Студия</li>
+					<li>Портфолио</li>
+					<li>Контакты</li>
+				</ul>
+			</nav>
 
-            <div>
-                <ul>
-                    <li>info@devstudio.com</li>
-                    <li>+38 096 111 11 11</li>
-                </ul>
-            </div>
-        </header>
+			<ul>
+				<li>info@devstudio.com</li>
+				<li>+38 096 111 11 11</li>
+			</ul>
+		</header>
+		<main>
+			<section>
+				<h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+				<button type="button">Заказать услугу</button>
+			</section>
 
-        <section>
-            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <button type="button">Заказать услугу</button>
-        </section>
+			<section>
+				<h2>Наши преимущества</h2>
+				<ul>
+					<li>
+						<h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+					</li>
+					<li>
+						<h3>ПУНКТУАЛЬНОСТЬ</h3>
+						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+					</li>
+					<li>
+						<h3>ПЛАНИРОВАНИЕ</h3>
+						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					</li>
+					<li>
+						<h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					</li>
+				</ul>
+			</section>
 
-        <section>
-            <ul>
-                <li>
-                    <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                    Идейные соображения, а также начало повседневной работы по формированию позиции.
-                </li>
-                <li>
-                    <h3>ПУНКТУАЛЬНОСТЬ</h3>
-                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                </li>
-                <li>
-                    <h3>ПЛАНИРОВАНИЕ</h3>
-                    Равным образом консультация с широким активом в значительной степени обуславливает.
-                </li>
-                <li>
-                    <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                </li>
-            </ul>
-        </section>
+			<section>
+				<h2>Чем мы занимаемся</h2>
+				<ul>
+					<li><img src="./images/img1.jpg" alt="Программирование и блок-схемы" width="370" height="294" /></li>
+					<li><img src="./images/img2.jpg" alt="Разработка дизайна для девайсов" width="370" height="294" /></li>
+					<li><img src="./images/img3.jpg" alt="Цветовая палитра на планшете" width="370" height="294" /></li>
+				</ul>
+			</section>
 
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <img src="./images/img1.jpg" alt="Программирование и блок-схемы" width="370" height="294">
-            <img src="./images/img2.jpg" alt="Разработка дизайна для девайсов" width="370" height="294">
-            <img src="./images/img3.jpg" alt="Цветовая палитра на планшете" width="370" height="294">
-        </section>
-
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/photo1.jpg" alt="Фотография сотрудника" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    Product Designer
-                </li>
-                <li>
-                    <img src="./images/photo2.jpg" alt="Фотография сотрудника" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    Frontend Developer
-                </li>
-                <li>
-                    <img src="./images/photo3.jpg" alt="Фотография сотрудника" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    Marketing
-                </li>
-                <li>
-                    <img src="./images/photo4.jpg" alt="Фотография сотрудника" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    UI Designer
-                </li>
-            </ul>
-        </section>
-
-    </main>
-
-    <footer>
-        <address>
-            <ul>
-                <li><a href="">WebStudio</a></li>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li>info@example.com</li>
-                <li>+38 099 111 11 11</li>
-            </ul>
-        </address>
-    </footer>
-</body>
+			<section>
+				<h2>Наша команда</h2>
+				<ul>
+					<li>
+						<img src="./images/photo1.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<h3>Игорь Демьяненко</h3>
+						<p lang="en">Product Designer</p>
+					</li>
+					<li>
+						<img src="./images/photo2.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<h3>Ольга Репина</h3>
+						<p lang="en">Frontend Developer</p>
+					</li>
+					<li>
+						<img src="./images/photo3.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<h3>Николай Тарасов</h3>
+						<p lang="en">Marketing</p>
+					</li>
+					<li>
+						<img src="./images/photo4.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<h3>Михаил Ермаков</h3>
+						<p lang="en">UI Designer</p>
+					</li>
+				</ul>
+			</section>
+		</main>
+		<footer>
+			<a href="">WebStudio</a>
+			<address>
+				<ul>
+					<li>г.Киев, пр-т Леси Украинки, 26</li>
+					<li>info@example.com</li>
+					<li>+38 099 111 11 11</li>
+				</ul>
+			</address>
+		</footer>
+	</body>
 </html>
