Вносить правки в дз

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 				<a href="">WebStudio</a>
 
 				<ul>
-					<li>Студия</li>
-					<li>Портфолио</li>
-					<li>Контакты</li>
+					<li><a href="/studio">Студия</a></li>
+					<li><a href="/portfolio">Портфолио</a></li>
+					<li><a href="/contacts">Контакты</a></li>
 				</ul>
 			</nav>
 
@@ -65,23 +65,31 @@
 				<ul>
 					<li>
 						<img src="./images/photo1.jpg" alt="Фотография сотрудника" width="270" height="260" />
-						<h3>Игорь Демьяненко</h3>
-						<p lang="en">Product Designer</p>
+						<div>
+							<h3>Игорь Демьяненко</h3>
+							<p lang="en">Product Designer</p>
+						</div>
 					</li>
 					<li>
 						<img src="./images/photo2.jpg" alt="Фотография сотрудника" width="270" height="260" />
-						<h3>Ольга Репина</h3>
-						<p lang="en">Frontend Developer</p>
+						<div>
+							<h3>Ольга Репина</h3>
+							<p lang="en">Frontend Developer</p>
+						</div>
 					</li>
 					<li>
 						<img src="./images/photo3.jpg" alt="Фотография сотрудника" width="270" height="260" />
-						<h3>Николай Тарасов</h3>
-						<p lang="en">Marketing</p>
+						<div>
+							<h3>Николай Тарасов</h3>
+							<p lang="en">Marketing</p>
+						</div>
 					</li>
 					<li>
 						<img src="./images/photo4.jpg" alt="Фотография сотрудника" width="270" height="260" />
-						<h3>Михаил Ермаков</h3>
-						<p lang="en">UI Designer</p>
+						<div>
+							<h3>Михаил Ермаков</h3>
+							<p lang="en">UI Designer</p>
+						</div>
 					</li>
 				</ul>
 			</section>
@@ -90,9 +98,13 @@
 			<a href="">WebStudio</a>
 			<address>
 				<ul>
-					<li>г.Киев, пр-т Леси Украинки, 26</li>
-					<li>info@example.com</li>
-					<li>+38 099 111 11 11</li>
+					<li>
+						<a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
+							г.Киев, пр-т Леси Украинки, 26
+						</a>
+					</li>
+					<li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+					<li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
