--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			</nav>
 
 			<ul>
-				<li>info@devstudio.com</li>
-				<li>+38 096 111 11 11</li>
+				<li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 		<main>
