--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
 				<h2>Наша команда</h2>
 				<ul>
 					<li>
-						<img src="./images/photo1.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<img src="./images/photo1.jpg" alt="Фотография сотрудника Игорь Демьяненко" width="270" height="260" />
 						<div>
 							<h3>Игорь Демьяненко</h3>
 							<p lang="en">Product Designer</p>
 						</div>
 					</li>
 					<li>
-						<img src="./images/photo2.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<img src="./images/photo2.jpg" alt="Фотография сотрудника Ольга Репина" width="270" height="260" />
 						<div>
 							<h3>Ольга Репина</h3>
 							<p lang="en">Frontend Developer</p>
 						</div>
 					</li>
 					<li>
-						<img src="./images/photo3.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<img src="./images/photo3.jpg" alt="Фотография сотрудника Николай Тарасов" width="270" height="260" />
 						<div>
 							<h3>Николай Тарасов</h3>
 							<p lang="en">Marketing</p>
 						</div>
 					</li>
 					<li>
-						<img src="./images/photo4.jpg" alt="Фотография сотрудника" width="270" height="260" />
+						<img src="./images/photo4.jpg" alt="Фотография сотрудника Михаил Ермаков" width="270" height="260" />
 						<div>
 							<h3>Михаил Ермаков</h3>
 							<p lang="en">UI Designer</p>
