--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</section>
 
 			<section>
-				<h2>Наши преимущества</h2>
+				<h2 hidden>Наши преимущества</h2>
 				<ul>
 					<li>
 						<h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
