Додає коректну розмітку для відображення лого

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<body>
 		<header>
 			<nav>
-				<a href="">WebStudio</a>
+				<a href="">
+					Web
+					<span>Studio</span>
+				</a>
 
 				<ul>
 					<li><a href="/studio">Студия</a></li>
@@ -95,7 +98,10 @@
 			</section>
 		</main>
 		<footer>
-			<a href="">WebStudio</a>
+			<a href="">
+				Web
+				<span>Studio</span>
+			</a>
 			<address>
 				<ul>
 					<li>
